# Dual-Cooperator

./: README.md
device_driver/: CMakeLists.txt  package.xml
device_driver/config/: controllers.yaml  controllers_innfos4.yaml  controllers_innfos6.yaml  controllers_qr5.yaml  controllers_xmate3p.yaml
device_driver/launch/: device_driver.launch  device_driver_innfos4.launch  device_driver_innfos6.launch  device_driver_innfos6b.launch  device_driver_qr5.launch  device_driver_xarm6.launch  device_driver_xb7.launch  device_driver_xmate3p.launch  start_controller.launch  stop_controller.launch
device_driver/src/: .device_driver.cpp.swp  device_driver.cpp
device_hardware/: CMakeLists.txt  package.xml
dual_xmate3p_gazebo/: CMakeLists.txt  package.xml
dual_xmate3p_moveit_control/: .setup_assistant  CMakeLists.txt  package.xml
dual_xmate3p_moveit_control/config/: dual_xmate3p.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
dual_xmate3p_moveit_control/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dual_xmate3p_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
model_description/: CMakeLists.txt  package.xml
(+37 files in other folders)
